# customer-personality-analysis

./: .gitignore  .gitlab-ci.yml  README.md  Test kmeans custom.ipynb  pyproject.toml
analysis/: clustering.ipynb  dataset_cleaining.ipynb  dataset_cleaning.ipynb  dimensional_reduction.ipynb  exploratory.ipynb  pyproject.toml
analysis/scripts/: dataset_analyse.py  dataset_preprocessing.py
charts/: heatmap.ipynb  histplots.ipynb
data/cleaned/: marketing_campaign_dropna.csv  marketing_campaign_dropna_no_outliers.csv  marketing_campaign_dropna_without_poor_data.csv  marketing_campaign_fillna.csv  marketing_campaign_fillna_median.csv  marketing_campaign_fillna_no_outliers.csv  marketing_campaign_reduction_drop_columns.csv
data/cluster/: marketin_campaign_principal_component.csv  marketing_campaign_principal_component.csv
kmeans_custom/: kmeans.py  kmeans1.py  test.py  test_kmean_custom.ipynb
