[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["alexandre-assad <alexandre.assad@laplateforme.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
seaborn = "^0.13.2"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
